# kafka2i

./: Cargo.toml  LICENSE  README.md
.github/workflows/: kafka2i.yaml
src/: config.rs  consumer.rs  logger.rs  main.rs  metadata.rs
src/kafka/: consumer.rs  metadata.rs  mod.rs  producer.rs  stats.rs
src/tui/: app.rs  events.rs  layout.rs  mod.rs  single_layout.rs  widgets.rs
