[package]
name = "krust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arboard = "3.6.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = { version = "0.5", default-features = false }
crossbeam = "0.8.4"
crossterm = { version = "0.29.0", features = ["event-stream"] }
flexi_logger = "0.31.7"
futures = "0.3.28"
heck = "0.5.0"
log = "0.4.28"
parking_lot = "0.12.2"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
rdkafka = { version = "0.38.0", features = ["cmake-build", "curl-static", "libz-static", "ssl-vendored", "sasl", "gssapi-vendored"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.9"
tui-input = "0.8.0"
serde_json = "1.0"